# file-magic

./: .gitignore  .gitmodules  CMakeLists.txt
codeblocks/: FileMagic.cbp  FileMagic.layout  LibMagic.cbp  README.md  config.h
dependency/: README.md
magic/Magdir/: c-lang  python
regex/: README.md
regex/lib/: localcharset.c  regcomp.c  regex.c  regex_config.h  regex_configmake.h  regex_internal.h
src/: cdf.h  compress.c  config.h.in  der.c  file.h  fsmagic.c  funcs.c  magic.c  magic.h.in  msutils.c  msutils.h  vasprintf.c
win32/: README.md
